--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
+  "engines": {
+    "node": ">=14.0.0 <16.0.0"
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
